--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,6 +91,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: python-ci
     if: ${{ github.ref_name == 'main' }}
+    name: Helm CI
 
     steps:
 
@@ -100,4 +101,21 @@ jobs:
         name: helm-artifacts
         path: .
 
-        
+    - name: Set up Helm
+      uses: azure/setup-helm@v4.2.0
+
+    - name: Lint Helm
+      run: helm lint ./todoapp/
+
+    - name: Template Helm
+      run: helm template todoapp ./todoapp/ -f ./todoapp/values.yaml
+
+    - name: Package Helm
+      run: helm package ./todoapp
+
+    - name: Upload helm package artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: helm-package
+        path: ./*.tgz
+
